--- a/public/css/global.css
+++ b/public/css/global.css
@@ -46,12 +46,35 @@ html, body{
 td{
     word-break: break-all;
     white-space: nowrap;
+    padding-bottom: 20px;
+    padding-top: 10px;
 }
 
 tr{
     border-top: 1px solid var(--secound-color);
 }
-
+thead{
+    background-color: #666;
+    padding-bottom: 20px;
+    padding-top: 20px;
+}
 .time{
     width: 40%;
+}
+
+::-webkit-scrollbar {
+    width: 5px; 
+}
+
+::-webkit-scrollbar-track {
+    background: transparent; 
+}
+
+::-webkit-scrollbar-thumb {
+    background: #888; 
+    border-radius: 5px; 
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #555; 
 }
