Fix english, API to Teams and Games now working, nav-bar admin is a @include now

--- a/public/css/auth.css
+++ b/public/css/auth.css
@@ -15,7 +15,8 @@ label, .button-submit{
 }
 
 input{
-    background-color: transparent;
+    background-color: black;
+    color: var(--secound-color);
     border-color: var(--secound-color);
     max-width: 250px;
     border-radius: 10px;
